# imfun

./: .pre-commit-config.yaml  Makefile  README.md  cartoon.py  mypy.ini  pyproject.toml
.github/workflows/: imfun.yml
imfun/: __init__.py  app.py  lib.py  py.typed
tests/: test_app.py
