[tool.poetry]
name = "imfun"
version = "0.1.0"
description = "Convert image to cartoon"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
numpy = "^1.19.4"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
